Fixed header overflow on iOS

--- a/css/main.css
+++ b/css/main.css
@@ -45,6 +45,10 @@ table {
   border-collapse: collapse;
   border-spacing: 0; }
 
+html, body {
+  overflow-x: hidden;
+  overflow-y: scroll; }
+
 html {
   font-size: 16px; }
 
@@ -394,8 +398,6 @@ body {
   top: 0;
   background: #191747;
   z-index: 1000;
-  overflow: auto;
-  -webkit-overflow-scrolling: touch;
   box-shadow: 0px 3px 5px 0px rgba(50, 50, 50, 0.5); }
   .header .container {
     height: 60px; }
